# kcemu

./: .gitignore  .kcemurc  .kcemurc.gtk  AUTHORS  COPYING.de  ChangeLog  KCemuSetup.iss  KCemuSetup.iss.in  Makefile.am  Makefile.in  NEWS  README  README.de  THANKS  TODO  VERSION  acconfig.h  acinclude.m4  aclocal.m4  configure  configure.ac  configure.in  cross-compile.sh  mkinstalldirs
PRG/: Makefile.am  Makefile.in  basic.kct  bennion_rbs_0x0200_0x46c0.prg  boulderdash_0x0400.prg  boulderdash_0x4000.scr  files.kct  wordpro.kct  z1013.kct
ROM/: 192k__d5.851  Makefile.am  Makefile.in  basic.kmc  basic_c0.851  basic_c0.855  cpmz9_c0.851  editor.kmc  epromf8.rom  floppy.rom  floppyf8.rom  idas__c0.851  io-mon.kmc  k1505_80.rom  k5651_40.rom  m900.rom  m901.rom  muglerpc.pcm  z1013_rb.rom  zsid__c0.851
asm/autostart/: Makefile.am  kc853.asm
conf/: Makefile.am  a5105.conf  default.conf  kc85-1.conf  kc85-3.conf  kc85-4.conf  kc87.conf  pcm.conf  z1013.conf
doc/: Makefile.am  Makefile.in  gettext-patch.txt  kcemu-help.xml.in  kcemurc.sample
images/: Makefile.am  Makefile.in  about.glade  audio.glade  color.glade  dialog.glade  dialog.xml  disk.glade  download.glade  help.glade  help.xml  kcemu-ac1.xpm  kcemu-basickc.xpm  kcemu-bic.xpm  kcemu-c80.xpm  kcemu-hueblermc.xpm  kcemu-icon.xcf.bz2  kcemu-icon.xpm  kcemu-kc85.xpm  kcemu-kc87.xpm  kcemu-kramermc.xpm  kcemu-lc80.xpm  kcemu-pcm.xpm  kcemu-poly880.xpm  kcemu-vcs80.xpm  kcemu-winicon_16x16.xcf.bz2  kcemu-winicon_32x32.xcf.bz2  kcemu-winicon_48x48.xcf.bz2  kcemu-z1013.xpm  keyboard.glade  legal.glade  legal.xml  main.glade  main.xml  module.glade  options.glade  options.xml  plotter.glade  savemem.glade  screenshot.glade  (+10 more)
images/original/: Makefile.am  convert.sh
include/kc/: Makefile.am  Makefile.in  basicrun.asm  basicrun.h  cb.h  cb_list.h  config.h.in  ctc.h  ctc1.h  ctc3.h  ctc6.h  ctc8.h  ctc9.h  ctc_base.h  ctc_d008.h  ctc_dio.h  ctc_fdc.h  daisy.h  disass.h  disk.h  disk_io.h  dma.h  fdc.h  fdc0s.h  fdc4.h  fdc7.h  fdc9.h  fdc_cmd.h  floppy.h  gdc.h  gide.h  ic.h  kc.h  keyb0.h  keyb0k.h  keyb1.h  keyb1k.h  keyb3.h  keyb3k.h  keyb6.h  (+98 more)
include/kc/ac1/: Makefile.am  ctc.h  keyboard.h  keydef.h  memory.h  pio.h
include/kc/basickc/: Makefile.am  keyboard.h  keydef.h  memory.h  ports.h
include/kc/bcs3/: Makefile.am  ctc.h  graphic.h  keyboard.h  keydef.h  memory.h
include/kc/c80/: Makefile.am  display.h  keyboard.h  keydef.h  memory.h  pio.h
include/kc/hueblermc/: Makefile.am  keyboard.h  keydef.h  memory.h
include/kc/kcnet/: Makefile.am  ipraw.h  kcnet.h  kcnetm.h  pio_net.h  socket.h  tcp.h  tftp.h  udp.h
include/kc/kramermc/: Makefile.am  Makefile.in  keyboard.h  keydef.h  memory.h  pio.h
include/kc/muglerpc/: Makefile.am  Makefile.in  ctc.h  keyboard.h  memory.h  pio.h  ports.h
include/kc/prefs/: Makefile.am  dirlist.h  parser.h  prefs.h  profile.h  strlist.h  types.h
include/kc/vcs80/: Makefile.am  keyboard.h  keydef.h  memory.h  pio.h
include/ui/gtk/: Makefile.am  Makefile.in  about.h  cmd.h  cmds.h  color.h  copying.h  debug.h  dialog.h  dirac.h  disk.h  download.h  fbrowse.h  ffmpeg.h  font1.h  gif.h  gtkledline.h  hedit.h  help.h  image.h  info.h  kcemu.xpm  keyboard.h  main.h  module.h  open.xpm  options.h  pause.xpm  play.xpm  plotter.h  savemem.h  schro.h  screenshot.h  selector.h  stop.xpm  tape.h  tapeadd.h  thanks.h  theora.h  ui_gtk.h  (+24 more)
roms/kc85/: Makefile.am  basicusb.855  caos43c.855  caos43e.855  caos45c.855  caos45e.855  caos46c.855  caos46e.855  caos47c.855  caos47e.855  caos48c.855  caos48e.855  caos__c0.855  caos__e0.853  caos__e0.855  floppy30.rom  floppy32.rom  floppy33.853  floppy33.854  m027.rom  m033.rom  m052.rom  pi88_ge.853  pi88_sw.853  pi88_ws.853  user46.855  user47.855  vdip12.rom  vdip21.rom  vdip2_42.rom  vdip2_44.rom
roms/z9001/: 192k__d2.851  192k__d3.851  Makefile.am  bitex_c0.851  edas__c0.851  kc_caos.rom  kcpascal.851  master.rom  mega_rom.851  r80___c0.851  rom_bank.851  slave.rom
setup/: KCemuSetup.nsi.in  KCemuSetup_gtk2.4.nsi.in  KCemuSetup_gtk2.6.nsi.in  KCemuSetup_gtk2.8.nsi.in  Makefile.am  kcemurc
src/fileio/: Makefile.am  Makefile.in  kc2img.c  kc2raw.c  kc2tap.c  kc2wav.c  load.c  load_AF.c  load_BASIC.c  load_BASICODE.c  load_BIN.c  load_GPF.c  load_HS.c  load_SSS.c  load_TAPE.c  load_UNKNOWN.c  save_IMG.c  save_RAW.c  save_TAP.c  save_WAV.c  test_load.c
src/kc/: Makefile.am  Makefile.in  cb_list.cc  ctc.cc  ctc1.cc  ctc3.cc  ctc6.cc  ctc8.cc  ctc9.cc  ctc_base.cc  ctc_d008.cc  ctc_dio.cc  ctc_fdc.cc  daisy.cc  debug.cc  disass.cc  disk.cc  disk_io.cc  dma.cc  fdc.cc  fdc0s.cc  fdc4.cc  fdc7.cc  fdc9.cc  fdc_cmd.cc  floppy.cc  gdc.cc  gide.cc  ic.cc  kc.cc  kcemu-send.c  kcemu.rc.in  keyb0.cc  keyb1.cc  keyb3.cc  keyb6.cc  keyb8.cc  keyb9.cc  memory.cc  memory0.cc  (+81 more)
src/kc/ac1/: Makefile.am  ctc.cc  keyboard.cc  memory.cc  pio.cc
src/kc/basickc/: Makefile.am  keyboard.cc  memory.cc  ports.cc
src/kc/bcs3/: Makefile.am  ctc.cc  graphic.cc  keyboard.cc  memory.cc
src/kc/c80/: Makefile.am  (+4 more)
src/libaudio/: Makefile.am  Makefile.in  load.c  load_als.c  load_aud.c  load_flc.c  load_mp3.c  load_ogg.c  load_oss.c  load_raw.c  load_snd.c  load_wav.c
src/libdisk/: Makefile.am  Makefile.in  disk.c  extract-system-tracks.sh  load_22dsk.c  load_cdm.c  load_dir.c  load_td0.c  tdtodump.c  teledisk.c
src/libgtkex/: Makefile.am  gtkfilebutton.c  gtkledline.c  libgtkex-test.c
src/libtape/: Makefile.am  Makefile.in  kcread2tap.c  kct.cc  kctape.cc  show_tap.c  test.c
src/ui/: Makefile.am  Makefile.in  commands.cc  error.cc  hsv2rgb.cc  log.cc  status.cc
src/util/: Makefile.am  Makefile.in  basic-decode.c  disk-tool.c  disp-wav.c  dump2img.c  dump2txt.c  ft.c  make-font.c  send_file.c  show-wav.c  tape-basicode.c  tape-check-bc.c  tape-check.c  tape-merge.c  tape-rename.c  tape-split.c  tape-test.c  tape-tool.c  tape-type.c  tp-type.c  wav2kc.c  wavtokc2.c
src/z80core2/: Makefile.am  Makefile.in  Z80.c  Z80.h
test/kc/: Makefile.am  Makefile.in  t_cb_list.cc  t_ctc.cc  t_memstream.cc
test/libaudio/: Makefile.am  Makefile.in  t_load.cc
(+525 files in other folders)
